삭제: 더미 데이터
삭제: 더미 데이터

성열현

--- a/StarryTail/Config/DefaultEngine.ini
+++ b/StarryTail/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
-EditorStartupMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
+GameDefaultMap=/Game/3DEnvironment/Dummy_MainHall.Dummy_MainHall
+EditorStartupMap=/Game/3DEnvironment/Dummy_MainHall.Dummy_MainHall
 GlobalDefaultGameMode="/Script/StarryTail.StarryTailGameMode"
 GameInstanceClass=/Script/StarryTail.STGameInstance
 
