추가: 데이터 테이블
추가: 데이터 테이블

공격 2회 버그 수정
데이터 테이블 읽기 기초 단계

성열현

--- a/StarryTail/Config/DefaultEngine.ini
+++ b/StarryTail/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/3DEnvironment/Dummy_MainHall.Dummy_MainHall
-EditorStartupMap=/Game/3DEnvironment/Dummy_MainHall.Dummy_MainHall
+GameDefaultMap=/Game/3DEnvironment/Dummy_Library.Dummy_Library
+EditorStartupMap=/Game/3DEnvironment/Dummy_Library.Dummy_Library
 GlobalDefaultGameMode="/Script/StarryTail.StarryTailGameMode"
 GameInstanceClass=/Script/StarryTail.STGameInstance
 
