수정: 기본맵 설정 및 구르기 방향, 카메라 각도 제한
수정: 기본맵 설정 및 구르기 방향, 카메라 각도 제한

성열현

--- a/StarryTail/Config/DefaultEngine.ini
+++ b/StarryTail/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/3DEnvironment/Dummy_Library.Dummy_Library
-EditorStartupMap=/Game/3DEnvironment/Dummy_Library.Dummy_Library
+GameDefaultMap=/Game/3DEnvironment/Library_04.Library_04
+EditorStartupMap=/Game/3DEnvironment/Library_04.Library_04
 GlobalDefaultGameMode="/Script/StarryTail.StarryTailGameMode"
 GameInstanceClass=/Script/StarryTail.STGameInstance
 
