수정: 깃 이그노어
수정: 깃 이그노어

성열현

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 StarryTail/.vs/
+StarryTail/.idea/
 StarryTail/Binaries/
 StarryTail/Build/
 StarryTail/Intermediate/
 StarryTail/Saved/
 StarryTail/StarryTail.sln
+StarryTail/StarryTail.sln.DotSettings.user
 StarryTail/Plugins/
 !Config/
 !Content/
