수정: 디테일창 및 애니메이션
수정: 디테일창 및 애니메이션

성열현

--- a/StarryTail/Config/DefaultEngine.ini
+++ b/StarryTail/Config/DefaultEngine.ini
@@ -112,3 +112,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 OutputFormat=Stereo
 bEnableLiveUpdate=True
 
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/StarryTail.PlayerCharacterDataStruct.FieldofView",NewName="/Script/StarryTail.PlayerCharacterDataStruct.FieldOfView")
