수정: 리팩토링 3
수정: 리팩토링 3

병합만 하면 완성
캐릭터, 플레이어HUD 병합 필요

성열현

--- a/StarryTail/Config/DefaultEngine.ini
+++ b/StarryTail/Config/DefaultEngine.ini
@@ -115,3 +115,4 @@ bEnableLiveUpdate=True
 
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/StarryTail.PlayerCharacterDataStruct.FieldofView",NewName="/Script/StarryTail.PlayerCharacterDataStruct.FieldOfView")
++PropertyRedirects=(OldName="/Script/StarryTail.IreneCharacter.CharacterDataStruct",NewName="/Script/StarryTail.IreneCharacter.IreneData")
