수정: 폼시스템 구축
수정: 폼시스템 구축

성열현

--- a/StarryTail/Config/DefaultInput.ini
+++ b/StarryTail/Config/DefaultInput.ini
@@ -123,12 +123,14 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Dodge",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
 +ActionMappings=(ActionName="MouseCursor",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftControl)
 +ActionMappings=(ActionName="RightButton",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
-+ActionMappings=(ActionName="MainKeyword",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
 +ActionMappings=(ActionName="Pause",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Tab)
 +ActionMappings=(ActionName="MoveW",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=W)
 +ActionMappings=(ActionName="MoveD",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=D)
 +ActionMappings=(ActionName="MoveS",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=S)
 +ActionMappings=(ActionName="MoveA",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=A)
++ActionMappings=(ActionName="FireKeyword",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=One)
++ActionMappings=(ActionName="WaterKeyword",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Two)
++ActionMappings=(ActionName="ElectricKeyword",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Three)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=A)
