추가 : 타이틀 화면 추가, 키변경  UI 배치 수정
타이틀 화면추가 및  UI 배치 수정

박찬영_22.04.29

--- a/StarryTail/Config/DefaultEngine.ini
+++ b/StarryTail/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/3DEnvironment/Library_04.Library_04
+GameDefaultMap=/Game/UI/MainTitle.MainTitle
 EditorStartupMap=/Game/3DEnvironment/Library_04.Library_04
 GlobalDefaultGameMode="/Script/StarryTail.StarryTailGameMode"
 GameInstanceClass=/Script/StarryTail.STGameInstance
