--- a/StarryTail/Config/DefaultGame.ini
+++ b/StarryTail/Config/DefaultGame.ini
@@ -1,6 +1,8 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=8C09C47D449E18D845B0669F2C0F2A8C
-ProjectName=Third Person Game Template
+ProjectName=STARRY_TAIL
+CompanyName=도토리묵
+CompanyDistinguishedName=도토리묵
 
 [StartupActions]
 bAddPacks=True
@@ -82,4 +84,15 @@ bSkipMovies=False
 +DirectoriesToAlwaysCook=(Path="/Game/FMOD/Snapshots")
 +DirectoriesToAlwaysCook=(Path="/Game/FMOD/VCAs")
 +DirectoriesToAlwaysStageAsNonUFS=(Path="FMOD/Desktop")
+
+[/Script/Engine.AssetManagerSettings]
+-PrimaryAssetTypesToScan=(PrimaryAssetType="Map",AssetBaseClass=/Script/Engine.World,bHasBlueprintClasses=False,bIsEditorOnly=True,Directories=((Path="/Game/Maps")),SpecificAssets=,Rules=(Priority=-1,ChunkId=-1,bApplyRecursively=True,CookRule=Unknown))
+-PrimaryAssetTypesToScan=(PrimaryAssetType="PrimaryAssetLabel",AssetBaseClass=/Script/Engine.PrimaryAssetLabel,bHasBlueprintClasses=False,bIsEditorOnly=True,Directories=((Path="/Game")),SpecificAssets=,Rules=(Priority=-1,ChunkId=-1,bApplyRecursively=True,CookRule=Unknown))
++PrimaryAssetTypesToScan=(PrimaryAssetType="Map",AssetBaseClass=/Script/Engine.World,bHasBlueprintClasses=False,bIsEditorOnly=True,Directories=((Path="/Game/Maps"),(Path="/Game/3DEnvironment")),SpecificAssets=(/Game/UI/MainTitle.MainTitle,/Game/3DEnvironment/Library_04.Library_04),Rules=(Priority=-1,ChunkId=-1,bApplyRecursively=True,CookRule=Unknown))
++PrimaryAssetTypesToScan=(PrimaryAssetType="PrimaryAssetLabel",AssetBaseClass=/Script/Engine.PrimaryAssetLabel,bHasBlueprintClasses=False,bIsEditorOnly=True,Directories=((Path="/Game")),SpecificAssets=,Rules=(Priority=-1,ChunkId=-1,bApplyRecursively=True,CookRule=Unknown))
+bOnlyCookProductionAssets=False
+bShouldManagerDetermineTypeAndName=False
+bShouldGuessTypeAndNameInEditor=True
+bShouldAcquireMissingChunksOnLoad=False
+MetaDataTagsForAssetRegistry=()
 
