수정 : 메인 레벨 변경
메인 레벨을 R0R1 로 변경

박찬영_22.05.02

--- a/StarryTail/Config/DefaultEngine.ini
+++ b/StarryTail/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/UI/MainTitle.MainTitle
-EditorStartupMap=/Game/3DEnvironment/Library_04.Library_04
+EditorStartupMap=/Game/3DEnvironment/Level/Dungeon_library/R0R1_LibrarySquare.R0R1_LibrarySquare
 GlobalDefaultGameMode="/Script/StarryTail.StarryTailGameMode"
 GameInstanceClass=/Script/StarryTail.STGameInstance
 
