--- a/StarryTail/Config/DefaultInput.ini
+++ b/StarryTail/Config/DefaultInput.ini
@@ -140,6 +140,7 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="LeftButton",Scale=1.000000,Key=LeftMouseButton)
 +AxisMappings=(AxisName="MouseWheel",Scale=1.000000,Key=MouseWheelAxis)
 +AxisMappings=(AxisName="RightButtonAxis",Scale=1.000000,Key=RightMouseButton)
++AxisMappings=(AxisName="WaterDodge",Scale=1.000000,Key=LeftShift)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
