수정 : 에디터 시작 레벨 변경
에디터 실행시 처음 시작될 맵 R0R1_LibraryAllMap으로 변경
박찬영_22.05.16

--- a/StarryTail/Config/DefaultEngine.ini
+++ b/StarryTail/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/UI/MainTitle.MainTitle
-EditorStartupMap=/Game/3DEnvironment/Level/Dungeon_library/R0R1_LibrarySquare.R0R1_LibrarySquare
+EditorStartupMap=/Game/3DEnvironment/Level/Dungeon_library/R0R1_LibraryAllMap.R0R1_LibraryAllMap
 GlobalDefaultGameMode="/Script/StarryTail.StarryTailGameMode"
 GameInstanceClass=/Script/StarryTail.STGameInstance
 
