--- a/StarryTail/Config/DefaultEngine.ini
+++ b/StarryTail/Config/DefaultEngine.ini
@@ -64,6 +64,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +Profiles=(Name="WallBehindEnemy",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Object"),(Channel="PlayerFindNearMonster")),HelpMessage="Needs description")
 +Profiles=(Name="PlayerDodge",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="Player",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Object"),(Channel="Enemy",Response=ECR_Ignore),(Channel="EnemyDetectPlayerChannel"),(Channel="EnemyDetectTrace")),HelpMessage="Needs description")
 +Profiles=(Name="Wall",CollisionEnabled=QueryOnly,bCanModify=True,ObjectTypeName="WorldStatic",CustomResponses=((Channel="PlayerAttack"),(Channel="Object"),(Channel="EnemyDetectPlayerChannel"),(Channel="EnemyAttack"),(Channel="EnemyDetectTrace"),(Channel="PlayerFindNearMonster"),(Channel="EnemyDetectEnemyChannel")),HelpMessage="Needs description")
++Profiles=(Name="Feather",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="Feather",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PlayerAttack"),(Channel="Object"),(Channel="Enemy",Response=ECR_Ignore),(Channel="Feather",Response=ECR_Ignore)),HelpMessage="Needs description")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,DefaultResponse=ECR_Ignore,bTraceType=False,bStaticObject=False,Name="PlayerAttack")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel2,DefaultResponse=ECR_Ignore,bTraceType=False,bStaticObject=False,Name="Object")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel3,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="Player")
@@ -73,6 +74,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel7,DefaultResponse=ECR_Ignore,bTraceType=True,bStaticObject=False,Name="EnemyDetectTrace")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel8,DefaultResponse=ECR_Ignore,bTraceType=False,bStaticObject=False,Name="PlayerFindNearMonster")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel9,DefaultResponse=ECR_Ignore,bTraceType=True,bStaticObject=False,Name="EnemyDetectEnemyChannel")
++DefaultChannelResponses=(Channel=ECC_GameTraceChannel10,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="Feather")
 +EditProfiles=(Name="Pawn",CustomResponses=((Channel="Object")))
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel="Player",Response=ECR_Overlap),(Channel="Enemy",Response=ECR_Overlap)))
 +EditProfiles=(Name="OverlapAll",CustomResponses=((Channel="Player",Response=ECR_Overlap),(Channel="Enemy",Response=ECR_Overlap)))
@@ -83,7 +85,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +EditProfiles=(Name="CharacterMesh",CustomResponses=((Channel="Player",Response=ECR_Ignore),(Channel="Enemy",Response=ECR_Ignore)))
 +EditProfiles=(Name="Ragdoll",CustomResponses=((Channel="Player",Response=ECR_Ignore),(Channel="Enemy",Response=ECR_Ignore)))
 +EditProfiles=(Name="UI",CustomResponses=((Channel="Player",Response=ECR_Overlap),(Channel="Enemy",Response=ECR_Overlap)))
-+EditProfiles=(Name="BlockAll",CustomResponses=((Channel="Visibility"),(Channel="EnemyDetectTrace")))
++EditProfiles=(Name="BlockAll",CustomResponses=((Channel="Visibility"),(Channel="EnemyDetectTrace"),(Channel="EnemyAttack",Response=ECR_Ignore)))
 -ProfileRedirects=(OldName="BlockingVolume",NewName="InvisibleWall")
 -ProfileRedirects=(OldName="InterpActor",NewName="IgnoreOnlyPawn")
 -ProfileRedirects=(OldName="StaticMeshComponent",NewName="BlockAllDynamic")
