--- a/StarryTail/Config/DefaultInput.ini
+++ b/StarryTail/Config/DefaultInput.ini
@@ -124,10 +124,6 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="MouseCursor",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftControl)
 +ActionMappings=(ActionName="RightButton",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
 +ActionMappings=(ActionName="Pause",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Tab)
-+ActionMappings=(ActionName="MoveW",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=W)
-+ActionMappings=(ActionName="MoveD",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=D)
-+ActionMappings=(ActionName="MoveS",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=S)
-+ActionMappings=(ActionName="MoveA",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=A)
 +ActionMappings=(ActionName="FireKeyword",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=One)
 +ActionMappings=(ActionName="WaterKeyword",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Two)
 +ActionMappings=(ActionName="ElectricKeyword",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Three)
@@ -142,6 +138,10 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="MouseWheel",Scale=1.000000,Key=MouseWheelAxis)
 +AxisMappings=(AxisName="RightButtonAxis",Scale=1.000000,Key=RightMouseButton)
 +AxisMappings=(AxisName="WaterDodge",Scale=1.000000,Key=LeftShift)
++AxisMappings=(AxisName="MoveW",Scale=1.000000,Key=W)
++AxisMappings=(AxisName="MoveA",Scale=1.000000,Key=A)
++AxisMappings=(AxisName="MoveS",Scale=1.000000,Key=S)
++AxisMappings=(AxisName="MoveD",Scale=1.000000,Key=D)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
