시엔티아 작업 중간 커밋

--- a/StarryTail/Config/DefaultEngine.ini
+++ b/StarryTail/Config/DefaultEngine.ini
@@ -65,6 +65,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +Profiles=(Name="PlayerDodge",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="Player",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Object"),(Channel="Enemy",Response=ECR_Ignore),(Channel="EnemyDetectPlayerChannel"),(Channel="EnemyDetectTrace")),HelpMessage="Needs description")
 +Profiles=(Name="Wall",CollisionEnabled=QueryOnly,bCanModify=True,ObjectTypeName="WorldStatic",CustomResponses=((Channel="PlayerAttack"),(Channel="Object"),(Channel="EnemyDetectPlayerChannel"),(Channel="EnemyAttack"),(Channel="EnemyDetectTrace"),(Channel="PlayerFindNearMonster"),(Channel="EnemyDetectEnemyChannel")),HelpMessage="Needs description")
 +Profiles=(Name="Feather",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="Feather",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PlayerAttack"),(Channel="Object"),(Channel="Enemy",Response=ECR_Ignore),(Channel="Feather",Response=ECR_Ignore)),HelpMessage="Needs description")
++Profiles=(Name="Piece",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="Piece",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="Feather",Response=ECR_Ignore),(Channel="Piece",Response=ECR_Ignore)),HelpMessage="Needs description")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,DefaultResponse=ECR_Ignore,bTraceType=False,bStaticObject=False,Name="PlayerAttack")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel2,DefaultResponse=ECR_Ignore,bTraceType=False,bStaticObject=False,Name="Object")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel3,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="Player")
@@ -75,6 +76,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel8,DefaultResponse=ECR_Ignore,bTraceType=False,bStaticObject=False,Name="PlayerFindNearMonster")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel9,DefaultResponse=ECR_Ignore,bTraceType=True,bStaticObject=False,Name="EnemyDetectEnemyChannel")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel10,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="Feather")
++DefaultChannelResponses=(Channel=ECC_GameTraceChannel11,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="Piece")
 +EditProfiles=(Name="Pawn",CustomResponses=((Channel="Object")))
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel="Player",Response=ECR_Overlap),(Channel="Enemy",Response=ECR_Overlap)))
 +EditProfiles=(Name="OverlapAll",CustomResponses=((Channel="Player",Response=ECR_Overlap),(Channel="Enemy",Response=ECR_Overlap)))
