--- a/StarryTail/Config/DefaultEngine.ini
+++ b/StarryTail/Config/DefaultEngine.ini
@@ -121,3 +121,9 @@ bEnableLiveUpdate=True
 +PropertyRedirects=(OldName="/Script/StarryTail.PlayerCharacterDataStruct.FieldofView",NewName="/Script/StarryTail.PlayerCharacterDataStruct.FieldOfView")
 +PropertyRedirects=(OldName="/Script/StarryTail.IreneCharacter.CharacterDataStruct",NewName="/Script/StarryTail.IreneCharacter.IreneData")
 
+[/Script/NavigationSystem.RecastNavMesh]
+TileSizeUU=2048.000000
+MaxSimplificationError=0.200000
+RuntimeGeneration=Dynamic
+CellHeight=10.000000
+
