수정 : 네브메쉬 설정, 볼데리스 Broken이벤트 추가

--- a/StarryTail/Config/DefaultEngine.ini
+++ b/StarryTail/Config/DefaultEngine.ini
@@ -122,9 +122,17 @@ bEnableLiveUpdate=True
 +PropertyRedirects=(OldName="/Script/StarryTail.IreneCharacter.CharacterDataStruct",NewName="/Script/StarryTail.IreneCharacter.IreneData")
 
 [/Script/NavigationSystem.RecastNavMesh]
-TileSizeUU=2048.000000
+TileSizeUU=1000.000000
 MaxSimplificationError=0.200000
 RuntimeGeneration=Dynamic
-CellHeight=10.000000
-CellSize=128.000000
+CellHeight=5.000000
+CellSize=100.000000
+AgentRadius=34.000000
+AgentMaxStepHeight=35.000000
+MinRegionArea=0.000000
+MergeRegionSize=400.000000
+bFixedTilePoolSize=False
+TilePoolSize=1024
+HeuristicScale=0.999000
+bForceRebuildOnLoad=True
 
