--- a/StarryTail/Config/DefaultEngine.ini
+++ b/StarryTail/Config/DefaultEngine.ini
@@ -122,7 +122,7 @@ bEnableLiveUpdate=True
 +PropertyRedirects=(OldName="/Script/StarryTail.IreneCharacter.CharacterDataStruct",NewName="/Script/StarryTail.IreneCharacter.IreneData")
 
 [/Script/NavigationSystem.RecastNavMesh]
-TileSizeUU=1000.000000
+TileSizeUU=1600.000000
 MaxSimplificationError=0.200000
 RuntimeGeneration=Dynamic
 CellHeight=5.000000
@@ -131,7 +131,7 @@ AgentRadius=34.000000
 AgentMaxStepHeight=35.000000
 MinRegionArea=0.000000
 MergeRegionSize=400.000000
-bFixedTilePoolSize=False
+bFixedTilePoolSize=True
 TilePoolSize=1024
 HeuristicScale=0.999000
 bForceRebuildOnLoad=True
