--- a/StarryTail/Config/DefaultEngine.ini
+++ b/StarryTail/Config/DefaultEngine.ini
@@ -78,7 +78,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel10,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="Feather")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel11,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="Piece")
 +EditProfiles=(Name="Pawn",CustomResponses=((Channel="Object")))
-+EditProfiles=(Name="Trigger",CustomResponses=((Channel="Player",Response=ECR_Overlap),(Channel="Enemy",Response=ECR_Overlap)))
++EditProfiles=(Name="Trigger",CustomResponses=((Channel="Player",Response=ECR_Overlap),(Channel="Enemy",Response=ECR_Ignore)))
 +EditProfiles=(Name="OverlapAll",CustomResponses=((Channel="Player",Response=ECR_Overlap),(Channel="Enemy",Response=ECR_Overlap)))
 +EditProfiles=(Name="OverlapAllDynamic",CustomResponses=((Channel="Player",Response=ECR_Overlap),(Channel="Enemy",Response=ECR_Overlap)))
 +EditProfiles=(Name="IgnoreOnlyPawn",CustomResponses=((Channel="Player",Response=ECR_Ignore),(Channel="Enemy",Response=ECR_Ignore)))
