추가 : 폰트 추가 , 아이린 이미지 변경, 다이얼로그 스킵 추가
박찬영_22.06.07

--- a/StarryTail/Config/DefaultInput.ini
+++ b/StarryTail/Config/DefaultInput.ini
@@ -128,6 +128,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +ActionMappings=(ActionName="RightButton",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
 +ActionMappings=(ActionName="Dodge",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
++ActionMappings=(ActionName="DialogSkip",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Hyphen)
 +AxisMappings=(AxisName="Turn",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="LeftButton",Scale=1.000000,Key=LeftMouseButton)
