수정 : 더미 UI 리소스 제거

--- a/StarryTail/Config/DefaultEngine.ini
+++ b/StarryTail/Config/DefaultEngine.ini
@@ -139,3 +139,8 @@ bForceRebuildOnLoad=True
 [/Script/Engine.RendererSettings]
 r.SSGI.Enable=True
 
+[/Script/WmfMediaFactory.WmfMediaSettings]
+AllowNonStandardCodecs=True
+LowLatency=True
+HardwareAcceleratedVideoDecoding=True
+
