수정: 코드 리팩토링 및 사용안하는 시스템 삭제
수정: 코드 리팩토링 및 사용안하는 시스템 삭제

성열현

--- a/StarryTail/Config/DefaultEngine.ini
+++ b/StarryTail/Config/DefaultEngine.ini
@@ -120,6 +120,14 @@ bEnableLiveUpdate=True
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/StarryTail.PlayerCharacterDataStruct.FieldofView",NewName="/Script/StarryTail.PlayerCharacterDataStruct.FieldOfView")
 +PropertyRedirects=(OldName="/Script/StarryTail.IreneCharacter.CharacterDataStruct",NewName="/Script/StarryTail.IreneCharacter.IreneData")
++PropertyRedirects=(OldName="/Script/StarryTail.IreneAttackInstance.TargetMonster",NewName="/Script/StarryTail.IreneAttackInstance.SwordTargetMonster")
++PropertyRedirects=(OldName="/Script/StarryTail.IreneAttackInstance.CanThrowQuillMonster",NewName="/Script/StarryTail.IreneAttackInstance.QuillTargetMonster")
++PropertyRedirects=(OldName="/Script/StarryTail.IreneAnimInstance.FireAttackMontage",NewName="/Script/StarryTail.IreneAnimInstance.AttackMontage")
++ClassRedirects=(OldName="/Script/StarryTail.DodgeFireStartState",NewName="/Script/StarryTail.DodgeStartState")
++ClassRedirects=(OldName="/Script/StarryTail.DodgeFireEndState",NewName="/Script/StarryTail.DodgeEndState")
++ClassRedirects=(OldName="/Script/StarryTail.BasicAttack1FireState",NewName="/Script/StarryTail.BasicAttack1State")
++ClassRedirects=(OldName="/Script/StarryTail.BasicAttack2FireState",NewName="/Script/StarryTail.BasicAttack2State")
++ClassRedirects=(OldName="/Script/StarryTail.BasicAttack3FireState",NewName="/Script/StarryTail.BasicAttack3State")
 
 [/Script/NavigationSystem.RecastNavMesh]
 TileSizeUU=1600.000000
