수정: 전투시스템
수정: 전투시스템

SP 관련 삭제
닷지 수정
화상 디버프 추가

성열현

--- a/StarryTail/Config/DefaultEngine.ini
+++ b/StarryTail/Config/DefaultEngine.ini
@@ -18,6 +18,11 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/StarryTail")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="StarryTailGameMode")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="StarryTailCharacter")
+bUseFixedFrameRate=False
+FixedFrameRate=30.000000
+bSmoothFrameRate=True
+SmoothedFrameRateRange=(LowerBound=(Type=Inclusive,Value=40.000000),UpperBound=(Type=Inclusive,Value=60.000000))
+MinDesiredFrameRate=35.000000
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
