--- a/StarryTail/Config/DefaultInput.ini
+++ b/StarryTail/Config/DefaultInput.ini
@@ -127,7 +127,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Action",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
 +ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +ActionMappings=(ActionName="RightButton",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
-+ActionMappings=(ActionName="Dodge",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
++ActionMappings=(ActionName="Dodge",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +ActionMappings=(ActionName="DialogSkip",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Hyphen)
 +ActionMappings=(ActionName="QuillAttributeChange",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=R)
 +AxisMappings=(AxisName="Turn",Scale=1.000000,Key=MouseX)
@@ -138,7 +138,6 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="MoveS",Scale=1.000000,Key=S)
 +AxisMappings=(AxisName="MoveD",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="MoveA",Scale=1.000000,Key=A)
-+AxisMappings=(AxisName="WaterDodge",Scale=1.000000,Key=LeftShift)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
