추가: 침수 및 감전
추가: 침수 및 감전

성열현

--- a/StarryTail/Config/DefaultInput.ini
+++ b/StarryTail/Config/DefaultInput.ini
@@ -130,6 +130,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Dodge",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +ActionMappings=(ActionName="DialogSkip",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Hyphen)
 +ActionMappings=(ActionName="QuillAttributeChange",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=R)
++ActionMappings=(ActionName="ThunderDeBuffKey",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=A)
++ActionMappings=(ActionName="ThunderDeBuffKey",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=D)
 +AxisMappings=(AxisName="Turn",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="LeftButton",Scale=1.000000,Key=LeftMouseButton)
