추가: 락온 시스템
추가: 락온 시스템

성열현

--- a/StarryTail/Config/DefaultInput.ini
+++ b/StarryTail/Config/DefaultInput.ini
@@ -132,6 +132,9 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="QuillAttributeChange",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=R)
 +ActionMappings=(ActionName="ThunderDeBuffKey",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=A)
 +ActionMappings=(ActionName="ThunderDeBuffKey",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=D)
++ActionMappings=(ActionName="LockOn",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MiddleMouseButton)
++ActionMappings=(ActionName="LeftLockOn",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=R)
++ActionMappings=(ActionName="RightLockOn",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=T)
 +AxisMappings=(AxisName="Turn",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="LeftButton",Scale=1.000000,Key=LeftMouseButton)
