수정: 프레임 제한
수정: 프레임 제한

40~60으로 제한

성열현

--- a/StarryTail/Config/DefaultEngine.ini
+++ b/StarryTail/Config/DefaultEngine.ini
@@ -18,9 +18,9 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/StarryTail")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="StarryTailGameMode")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="StarryTailCharacter")
-bSmoothFrameRate=False
+bSmoothFrameRate=True
 bUseFixedFrameRate=False
-SmoothedFrameRateRange=(LowerBound=(Type=Inclusive,Value=22.000000),UpperBound=(Type=Inclusive,Value=62.000000))
+SmoothedFrameRateRange=(LowerBound=(Type=Inclusive,Value=40.000000),UpperBound=(Type=Inclusive,Value=60.000000))
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
