퍼펙트 닷지 스킬 추가 연출 적용 (레벨 수정되었습니다.)
퍼펙트 닷지 스킬 추가 연출 적용

--- a/StarryTail/Config/DefaultEngine.ini
+++ b/StarryTail/Config/DefaultEngine.ini
@@ -157,6 +157,9 @@ bForceRebuildOnLoad=True
 
 [/Script/Engine.RendererSettings]
 r.SSGI.Enable=True
+r.DefaultFeature.LensFlare=True
+r.DefaultFeature.AutoExposure=False
+r.NormalMapsForStaticLighting=True
 
 [/Script/WmfMediaFactory.WmfMediaSettings]
 AllowNonStandardCodecs=True
