--- a/StarryTail/Config/DefaultEngine.ini
+++ b/StarryTail/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/UI/MainTitle.MainTitle
-EditorStartupMap=/Game/3DEnvironment/Level/Dummy/MonsterTest.MonsterTest
+EditorStartupMap=/Game/3DEnvironment/Level/NewLevel.NewLevel
 GlobalDefaultGameMode="/Script/StarryTail.StarryTailGameMode"
 GameInstanceClass=/Script/StarryTail.STGameInstance
 
