--- a/StarryTail/Config/DefaultEngine.ini
+++ b/StarryTail/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/3DEnvironment/Level/FairyLab.FairyLab
-EditorStartupMap=/Game/3DEnvironment/Level/FairyLab.FairyLab
+GameDefaultMap=/Game/3DEnvironment/Level/MainFairyLab.MainFairyLab
+EditorStartupMap=/Game/3DEnvironment/Level/MainFairyLab.MainFairyLab
 GlobalDefaultGameMode="/Script/StarryTail.StarryTailGameMode"
 GameInstanceClass=/Script/StarryTail.STGameInstance
 
