수정: 정령 지속 디버프
수정: 정령 지속 디버프

성열현

--- a/StarryTail/Config/DefaultInput.ini
+++ b/StarryTail/Config/DefaultInput.ini
@@ -128,8 +128,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="DialogSkip",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Hyphen)
 +ActionMappings=(ActionName="WeaponChange",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
 +ActionMappings=(ActionName="TestSkillCamera",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Z)
-+ActionMappings=(ActionName="ThunderDeBuffKey",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=A)
-+ActionMappings=(ActionName="ThunderDeBuffKey",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=D)
++ActionMappings=(ActionName="BreakAttack",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
 +AxisMappings=(AxisName="Turn",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="LeftButton",Scale=1.000000,Key=LeftMouseButton)
