--- a/StarryTail/Config/DefaultInput.ini
+++ b/StarryTail/Config/DefaultInput.ini
@@ -129,6 +129,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="WeaponChange",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
 +ActionMappings=(ActionName="TestSkillCamera",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Z)
 +ActionMappings=(ActionName="BreakAttack",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
++ActionMappings=(ActionName="UltimateAttack",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
 +AxisMappings=(AxisName="Turn",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="LeftButton",Scale=1.000000,Key=LeftMouseButton)
