배경 렌즈 이펙트 추가 및 스타루시아 아우터글로우 기능 테스트
배경 렌즈 이펙트 추가 및 스타루시아 아우터글로우 기능 테스트

--- a/StarryTail/Config/DefaultEngine.ini
+++ b/StarryTail/Config/DefaultEngine.ini
@@ -172,6 +172,7 @@ r.SSGI.Enable=True
 r.DefaultFeature.LensFlare=True
 r.DefaultFeature.AutoExposure=False
 r.NormalMapsForStaticLighting=True
+r.CustomDepth=3
 
 [/Script/WmfMediaFactory.WmfMediaSettings]
 AllowNonStandardCodecs=True
