트리거 설정 수정

--- a/StarryTail/Config/DefaultEngine.ini
+++ b/StarryTail/Config/DefaultEngine.ini
@@ -95,7 +95,7 @@ MinDesiredFrameRate=35.000000
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel16,DefaultResponse=ECR_Ignore,bTraceType=False,bStaticObject=False,Name="AOE")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel17,DefaultResponse=ECR_Ignore,bTraceType=False,bStaticObject=False,Name="AOEShield")
 +EditProfiles=(Name="Pawn",CustomResponses=((Channel="Object"),(Channel="Projectile",Response=ECR_Ignore),(Channel="RushCheck")))
-+EditProfiles=(Name="Trigger",CustomResponses=((Channel="Player",Response=ECR_Overlap),(Channel="Enemy",Response=ECR_Ignore),(Channel="Projectile",Response=ECR_Ignore)))
++EditProfiles=(Name="Trigger",CustomResponses=((Channel="Player",Response=ECR_Overlap),(Channel="Enemy",Response=ECR_Ignore),(Channel="Projectile",Response=ECR_Ignore),(Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="Feather",Response=ECR_Ignore),(Channel="Piece",Response=ECR_Ignore)))
 +EditProfiles=(Name="OverlapAll",CustomResponses=((Channel="Player",Response=ECR_Overlap),(Channel="Enemy",Response=ECR_Overlap)))
 +EditProfiles=(Name="OverlapAllDynamic",CustomResponses=((Channel="Player",Response=ECR_Overlap),(Channel="Enemy",Response=ECR_Overlap)))
 +EditProfiles=(Name="IgnoreOnlyPawn",CustomResponses=((Channel="Player",Response=ECR_Ignore),(Channel="Enemy",Response=ECR_Ignore)))
