보스 몬스터 수정중

--- a/StarryTail/Config/DefaultEngine.ini
+++ b/StarryTail/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/3DEnvironment/Level/MainFairyLab.MainFairyLab
+GameDefaultMap=/Game/UI/MainTitle.MainTitle
 EditorStartupMap=/Game/3DEnvironment/Level/MainFairyLab.MainFairyLab
 GlobalDefaultGameMode="/Script/StarryTail.StarryTailGameMode"
 GameInstanceClass=/Script/StarryTail.STGameInstance
