몬스터 버그 수정

--- a/StarryTail/Config/DefaultGame.ini
+++ b/StarryTail/Config/DefaultGame.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=8C09C47D449E18D845B0669F2C0F2A8C
-ProjectName=STARRY_TAIL
+ProjectName=Lucia
 CompanyName=도토리묵
 CompanyDistinguishedName=도토리묵
 
