라이트 빌드 데이터
라이트 빌드 데이터

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@ Lucia/Binaries/
 Lucia/Build/
 Lucia/Intermediate/
 Lucia/Saved/
-Lucia/StarryTail.sln
-Lucia/StarryTail.sln.DotSettings.user
+Lucia/Lucia.sln
+Lucia/Lucia.sln.DotSettings.user
 Lucia/Plugins/SpinePlugin/Intermediate/
 Lucia/Plugins/SpinePlugin/Binaries/
 !Config/
