--- a/StarryTail/Config/DefaultEngine.ini
+++ b/StarryTail/Config/DefaultEngine.ini
@@ -182,4 +182,6 @@ HardwareAcceleratedVideoDecoding=True
 [URL]
 GameName=Lucia
 
+[/Script/Engine.StreamingSettings]
+s.AsyncLoadingThreadEnabled=True
 
